# OpenMask

./: .gitignore  README.md
ML backend/: .env  GRE.py  Text_Style_transfer.py  app.py  googleTrends.py  optimize.py  pyproject.toml  sentiment.py  tagger.py
client/: package-lock.json  package.json  tailwind.config.js
client/public/: index.html
client/src/: App.js  api.js  index.css  index.js  refreshHandler.js
client/src/components/: componentHolder.jsx
client/src/context/: AuthContext.jsx  Chat.jsx
client/src/dassy ui/: alert.jsx
client/src/hooks/: LikeUnlike.jsx  anonymousComment.jsx  anonymousLikeUnlike.jsx  commentHook.jsx  followUnfollowHook.jsx  getFollowerFollowingHook.jsx  getLocation.jsx  location.jsx  reportHook.jsx  searchHook.jsx  textTransformation.jsx
client/src/mui/: Multichip 2.jsx  inputfield.jsx  more.jsx  stepper.jsx
client/src/pages/: 404.jsx  anonymous.jsx  home.jsx  landing.jsx  login.jsx  message.jsx  notfound.css  (+3 more)
server/: index.js  package 2.json  package-lock.json  package.json
server/controllers/: EventsandTrendsController.js  anonymousPostController.js  authController.js  messageController.js  postController.js  textTransformationController.js  userController.js
server/middlewares/: authValidation.js  multer.js  procted.js
server/models/: anonymousPost.js  message.js  mongoConnection.js  notification.js  post.js  publicGroups.js  user.js
server/routes/: AnonymousPost.js  EventsAndTrends.js  authRouter.js  messagesRoute.js  post 2.js  post.js  test.js  textTransformation.js  usersRoute 2.js  usersRoute.js
server/sockets/: socket.js
server/utils/: googleConfig.js
(+26 files in other folders)
