[tool.poetry]
name = "ml backend"
version = "0.1.0"
description = ""
authors = ["vivek pawar <vivekpawarvp07@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
fastapi = "^0.100.0"
uvicorn = "^0.22.0"
torch = "^2.0.0"
transformers = "^4.30.0"
textblob = "^0.17.1"
sentence-transformers = "^2.2.2"
Pillow = "^10.0.0"
scikit-learn = "^1.3.0"
scipy = "^1.11.0"
numpy = "^1.25.0"
sentencepiece = "^0.2.0"
python-multipart = "^0.0.12"
nudenet = "^3.4.2"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"